busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: namespace-a
spec:
  containers:
    - image: radial/busyboxplus:curl
      command: ['sh', '-c', 'sleep 3600']
      imagePullPolicy: IfNotPresent
      name: busybox
  restartPolicy: Always
