customers-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customers-api
  namespace: customers-api
spec:
  containers:
    - image: acrtanganyregistry.azurecr.io/customers/api:389
      name: customers-api
  restartPolicy: Always
