service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-b-entry
  namespace: namespace-a
spec:
  hosts:
    - "service-b.namespace-b.svc.cluster.local"
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 80
      protocol: HTTP
  resolution: DNS
