authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-busybox-access
  namespace: namespace-b
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["namespace-a"]
